CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( CyclicLinking )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread ")
FILE(GLOB SRC_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR " ${CMAKE_CURRENT_SOURCE_DIR} )
MESSAGE( STATUS "SRC_FILES  " ${SRC_FILES} )

#SET (SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/$ENV{projectName}/src/*.cpp)

#SET(CMAKE_VERBOSE_MAKEFILE on)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})

