CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( One )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread ")
#FILE(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/$ENV{projectName}/src/*.cpp)
SET (SRC_FILES One.cpp)

SET(CMAKE_VERBOSE_MAKEFILE on)

ADD_LIBRARY(${PROJECT_NAME}  ${SRC_FILES})

PROJECT( Two )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread ")
SET (SRC_FILES Two.cpp)
ADD_LIBRARY(${PROJECT_NAME}  ${SRC_FILES})


PROJECT( main )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread ")
SET (SRC_FILES main.cpp)
ADD_EXECUTABLE(${PROJECT_NAME}  ${SRC_FILES})
target_link_libraries(${PROJECT_NAME}  Two One)

